# aichat734

./: .gitignore  Izumi 0407.json  Jailbreak_Analysis.md  PERSONAL_AI_PLAN_V1.md  PRD_V1.md  PRD_V2.md  ReZero角色卡分析.md  SillyTavern_Code_Analysis_V1.md  sqlite_schema.sql  产品需求文档_V2.md  后端总结文档.md  开发实施计划.md  数据库表结构设计.md  核心数据模型设计.md  模型列表.md  系统架构设计.md
backend/: .env.example  pyproject.toml  run_dev.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  cards.py  chat.py  conversation_snapshots.py  creation.py  health.py  long_term_memories.py  (+7 more)
backend/app/core/: config.py  database.py  exceptions.py  ids.py
backend/app/repositories/: __init__.py  cards.py  chat.py  conversation_snapshots.py  creation.py  long_term_memories.py  media.py  memory_summaries.py  messages.py  play.py  projects.py  prompt_traces.py  quick_replies.py  sessions.py  states.py  worldbooks.py
backend/app/schemas/: __init__.py  cards.py  chat.py  conversation_snapshots.py  creation.py  long_term_memories.py  media.py  memory_summaries.py  messages.py  models.py  play.py  prompt_pipeline.py  prompt_traces.py  sessions.py  states.py
backend/app/services/: __init__.py  card_importer.py  cards.py  chat.py  conversation_snapshots.py  creation.py  database_init_service.py  document_parser.py  long_term_memories.py  media.py  memory_summaries.py  messages.py  model_router.py  play.py  prompt_pipeline.py  prompt_traces.py  sessions.py  states.py
backend/scripts/: test_card_import_export.py  test_e2_memory_flow.py  test_f1_play_flow.py  test_f2_chat_flow.py  test_f3_creation_flow.py
(+51 files in other folders)
